# equine-microbiome-reporter

./: .coverage  .env.example  .env.hippovet  .gitignore  ACCESSION_VERIFICATION_REPORT.md  ACCOMPLISHMENTS_SINCE_OCT29.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLINICAL_FILTERING_IMPLEMENTATION.md  DEPLOYMENT_WSL2_COMPLETE.md  EMAIL_TO_GOSIA_UNBLOCK.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE_TESTED.md  IMPROVEMENTS_SUMMARY.md  KRAKEN2_SETUP.md  KRAKEN2_SETUP_INSTRUCTIONS.md  LICENSE  MULTI_LANGUAGE_IMPLEMENTATION_COMPLETE.md  NCBI_DOWNLOAD_README.md  POETRY_LOCK_FIX.md  PROJECT_STRUCTURE.md  QUICK_SETUP.md  README.md  READY_FOR_MONDAY.md  REPORT_TEMPLATE_STRUCTURE_CLEAN.md  TDD_IMPLEMENTATION_SUMMARY.md  TECHNICAL_WORKFLOW.md  TEMPLATE_CONTENT_MODULES.md  TEST_FIX_SUMMARY.md  TEST_NEW_REPORT.md  advanced_pdf_generator.py  config.yaml  demo.sh  email_response.md  email_to_gosia.md  environment.yml  environment_linux.yml  hippovet_kraken2_config_test.md  manifest.csv  manifest_real_data.csv  (+16 more)
config/: ncbi_samples.yaml  report_config.yaml  translation_strings.md  translations.yaml
deployment/: windows_installer.py
docs/: DEPLOYMENT_GUIDE.md  ENVIRONMENT_TROUBLESHOOTING.md  LINUX_INSTALLATION.md  PHASE1_DELIVERY.md  PIPELINE_VALIDATION_SUMMARY.md  PROJECT_ORGANIZATION.md  TRANSLATION_INSTALL.md  TRANSLATION_SETUP.md  csv_format_specification.md  fastq_pipeline_upgrade_guide.md  implementation_gaps.md  implementation_roadmap.md  jupyter_compatible_architecture.md  mvp_implementation_plan.md  mvp_week1_plan.md  project_architecture_v2.md  reference_pdf_content_english.md  reference_pdf_specification.md  translation_review_pl.xlsx
examples/: tutorial.ipynb
final_test/: report_en.html  report_ja.html  report_pl.html
legacy/: README.md  base.html  batch_processor.py  configure_report.html  enhanced_pdf_generator.py  enhanced_pdf_generator_en.py  report_ready.html  report_templates.py  run_web_app.sh  template_based_generator.py  web_app.py
notebooks/: batch_processing.ipynb  enhanced_fastq_to_pdf_pipeline.ipynb  fastq_processing_pipeline.ipynb  fastq_to_pdf_pipeline.ipynb  llm_recommendation_engine.ipynb  template_translation.ipynb
reports/: test_montana_report.html  test_thunder_report.html
scripts/: __init__.py  batch_clinical_processor.py  batch_multilanguage.py  continue_pipeline.py  create_mock_kreports.py  download_ncbi_samples.sh  epi2me_wrapper.py  extract_translation_strings.py  full_pipeline.py  generate_clean_report.py  generate_clinical_excel.py  generate_manifest_template.py  generate_translation_spreadsheet.py  import_translation_spreadsheet.py  monitor_download.sh  ncbi_batch_pipeline.py  nextflow_integration.py  quick_report.py  setup_env.sh  setup_wsl2_environment.sh  test_installation.py  test_kraken2_pipeline.sh  translate_report_content.py  (+3 more)
src/: __init__.py  (+31 more)
(+100 files in other folders)
