[tool.poetry]
name = "equine-microbiome-reporter"
version = "0.1.0"
description = "Automated PDF report generation for equine gut microbiome analysis from 16S rRNA sequencing data"
authors = ["HippoVet Plus <noreply@hippovet.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
numpy = "^1.21.0"
reportlab = "^4.0.0"
PyYAML = "^6.0"
Flask = "^2.3.0"
Werkzeug = "^2.3.0"
jinja2 = "^3.1.6"
weasyprint = "^65.1"
openpyxl = "^3.1.0"  # For Excel export/import
python-dotenv = "^1.0.0"  # For environment configuration
biopython = "^1.84.0"  # For FASTQ parsing and bioinformatics
seaborn = "^0.13.0"  # For enhanced plotting
psutil = "^7.0.0"
scipy = "^1.11.0"  # For statistical analysis and correlation validation
requests = "^2.31.0"  # For NCBI API calls and file downloads

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipywidgets = "^8.1.0"  # For interactive notebook widgets
tqdm = "^4.66.0"  # For progress bars

[tool.poetry.group.translation]
optional = true

[tool.poetry.group.translation.dependencies]
google-cloud-translate = "^3.15.0"
google-auth = "^2.28.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"

[tool.poetry.group.translation-free]
optional = true

[tool.poetry.group.translation-free.dependencies]
googletrans = "^4.0.0rc1"
deep-translator = "^1.11.4"
translatepy = "^2.3"
deepl = "^1.27.0"

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
openai = "^1.0.0"  # For OpenAI GPT models
anthropic = "^0.45.0"  # For Claude models
google-generativeai = "^0.5.0"  # For Google Gemini
python-dotenv = "^1.0.0"  # For environment variables (already in main deps)

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.0"  # for parallel test execution
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
